[FIX] Scrollbar styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -87,3 +87,33 @@
 .icon-default-size {
     @apply min-w-[50px] min-h-[50px]
 }
+
+
+.mySwiper {
+    @apply min-h-[340px] flex items-center justify-center
+}
+
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.scrollbar-hidden {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+
+.scrollbar::-webkit-scrollbar {
+    @apply w-2.5
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    @apply bg-primary-light-300 dark:bg-primary-dark-200
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-primary-dark-400/25 rounded-md hover:bg-primary-dark-400/50 dark:bg-primary-light/25 dark:hover:bg-primary-light/50
+}
